Moved MT::App::Trackbacks and mt-tb.cgi into pack and added it to the pack's registry

--- a/addons/Trackback.pack/config.yaml
+++ b/addons/Trackback.pack/config.yaml
@@ -21,6 +21,9 @@ config_settings:
         default: 0
     
 applications:
+    tb:
+        handler: MT::App::Trackback
+
     cms:
         methods:
             list_ping: $Trackback::MT::CMS::TrackBack::list
